--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,26 @@
-pandas>=1.5.0
-numpy>=1.21.0
-scikit-learn>=1.2.0
-scipy>=1.9.0
-matplotlib>=3.5.0
-seaborn>=0.12.0
-folium>=0.14.0
+branca==0.8.2
+certifi==2026.1.4
+charset-normalizer==3.4.4
+contourpy==1.3.3
+cycler==0.12.1
+fonttools==4.61.1
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.3
+kiwisolver==1.4.9
+MarkupSafe==3.0.3
+matplotlib==3.10.8
+numpy==2.4.2
+packaging==26.0
+pandas==3.0.0
+pillow==12.1.0
+pyparsing==3.3.2
+python-dateutil==2.9.0.post0
+requests==2.32.5
+scikit-learn==1.8.0
+scipy==1.17.0
+seaborn==0.13.2
+six==1.17.0
+threadpoolctl==3.6.0
+urllib3==2.6.3
+xyzservices==2025.11.0
